--- a/content/bleaching2.qmd
+++ b/content/bleaching2.qmd
@@ -118,6 +118,119 @@ summary(glht(model_plob,
 ```
 
 ```{r}
+rpn_plob2 <- read.csv('rpn_cover.csv') %>%
+  as_tibble() %>%
+  filter(group == "PLOB") %>%
+  mutate_at(vars(location, depth, transect, group), factor) %>%
+  mutate(
+  cover = total_count/total_points,
+  failures = total_points - total_count
+    ) %>%
+  group_by(location, depth) %>%
+  dplyr::summarize(mean = mean(cover), 
+                   sd = sd(cover), 
+                   n = n(),
+                   se = sd/sqrt(n)
+  ) %>%
+  mutate(se = sd / sqrt(n),
+         lower.ci = mean - qt(1 - (0.05 / 2), n - 1) * se,
+         upper.ci = mean + qt(1 - (0.05 / 2), n - 1) * se)
+```
+
+```{r}
+rpn_plob2
+```
+
+```{r}
+rpn_plob3 <-
+  as_tibble(rpn_plob2)
+```
+
+```{r}
+rpn_plob_summ <-
+    rpn_plob3 %>%
+    add_column(coast = rep(c('North', 'Southeast', 'West'), each = 2)) %>%
+    add_column(depth2 = rep(c('15 m', '8 m'), times = 3)) %>%
+    mutate_at(vars(coast, depth2), factor)
+```
+
+```{r}
+rpn_plob_summ
+```
+
+
+```{r}
+rpn_plob_summ.gg <- rpn_plob_summ %>%
+  mutate(coast = factor(coast, levels = c("North", "West", "Southeast")),
+          depth2 = factor(depth2, levels = c('8 m', '15 m')
+                                )
+                )
+```
+
+```{r}
+rpn_plob_summ.gg <- rpn_plob_summ %>%
+  mutate(coast = factor(coast, levels = c('North', 'West', 'Southeast')),
+          depth2 = factor(depth2, levels = c('8 m', '15 m')
+                                )
+                )
+```
+
+```{r}
+rpn_plob_summ.gg
+```
+
+```{r}
+x_labels = c("North", "West", "Southeast")
+```
+
+```{r}
+label_names = c("8 m" = "8 m", "15 m" = "15 m")
+```
+
+```{r}
+rpn_plob_2015.ggbarplot <- ggplot(rpn_plob_summ.gg, aes(x = coast, y = mean, fill = coast)) + 
+  scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
+  geom_bar(stat = "identity", width = 0.75, color = "black", linewidth = 0.50, alpha = 0.6) +
+  facet_wrap( ~ depth2, labeller = as_labeller(label_names), dir = "v", ncol = 1)
+```
+
+```{r}
+rpn_plob_2015.ggbarplot <- ggplot(rpn_plob_summ.gg, aes(x = factor(coast, x_labels), y = mean, fill = coast)) +   
+  geom_bar(stat = "identity", width = 0.75, color = "black", linewidth = 0.50, alpha = 0.6) +
+  geom_linerange(aes(ymin = mean, ymax = sd), linewidth = 0.75) +
+  scale_y_continuous(expression(paste("Percent Cover")), limits = c(0, 1.5), 
+                     labels = function(x) paste0(x*100)) + 
+  scale_x_discrete(expand = c(0, 1), labels = x_labels) + 
+  scale_fill_manual(values = c("#FFC74E", "#82A5C0", "#ABC178")) + #
+  facet_wrap( ~ depth2, labeller = as_labeller(label_names), dir = "v", ncol = 1) + 
+  #ggtitle(expression(paste(italic(" Pocillopora "), "spp."))) +
+  #geom_text(aes(label = cld, y = upper.ci), vjust = -0.5, size = 10) +
+  #scale_y_log10(expression(paste("Colony Size (", cm^2, ")"), limits = c(0, 100000))) +
+  labs(x = NULL) +
+  theme(strip.text = element_text(size = 10, color = "black", hjust = 0.50),
+        strip.background = element_rect(fill = "#FFFFFF", color = NA),    
+        panel.background = element_rect(fill = "#FFFFFF", color = NA),
+        panel.grid.major.x = element_blank(),
+        panel.grid.minor.x = element_blank(),
+        panel.grid.minor.y = element_blank(),
+        panel.grid.major.y = element_line(color = "#b2b2b2"),
+        panel.spacing.x = unit(1, "cm"),
+        panel.spacing.y = unit(0.5, "cm"),
+        panel.spacing = unit(1, "lines"),
+        axis.ticks = element_blank(),
+        legend.position = 'none',
+        #plot.title = element_text(size = 11),
+        axis.text.y = element_text(size = 17),
+        axis.text.x = element_text(size = 18.5),
+        axis.title.y = element_text(size = 20),
+        legend.title = element_blank())
+```
+
+```{r}
+rpn_plob_2015.ggbarplot
+```
+
+```{r}
 rpn_plob_bleach <- rpn_bleach %>%  
   filter(group == 'PLOB' & status == 'BL') %>%
   group_by(location, depth, transect) %>%
